[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"


[tool.flit.metadata]
module = "foodx_devops_tools"
author = "FoodX Technologies"
author-email = "support@foodxtech.com"
home-page = "https://github.com/Food-X-Technologies/foodx_devops_tools"
description-file = "README.rst"
classifiers = ["License :: OSI Approved :: MIT License"]

requires-python = ">=3.8"

requires = [
    "aiofiles ~=0.7.0",
    # required for ansible vault interactions
    "ansible >=4.4.0, <6.0",
    "azure-devops >=6.0.0b4",
    "click ~=8.1.2",
    "deepmerge ~=1.0.1",
    "jinja2 ~=3.1.1",
    "pydantic ~=1.9.0",
    "ruamel.yaml ~=0.17.20",
]


[tool.flit.scripts]
deploy-me = "foodx_devops_tools.deploy_me_entry:flit_entry"
file-maintainer = "foodx_devops_tools.file_maintainer_entry:flit_entry"
puff = "foodx_devops_tools.puff_utility:entrypoint"
foodx-release-flow = "foodx_devops_tools.release_flow_entry:flit_entry"
validate-configuration = "foodx_devops_tools.validate_configuration:flit_entry"


[tool.flit.metadata.requires-extra]
dev = [
    "build_harness ~=1.0",
    "pre_commit ~=2.17.0",
    "pyjson5 ~=1.5.2",
    "types-aiofiles ~=0.1.9",
]
doc = [
    "sphinx ~=4.5.0",
    "sphinx_rtd_theme ~=1.0",
]
test = [
    "asynctest ~=0.13.0",
    "pytest ~=7.1.1",
    "pytest-asyncio ~=0.18.3",
    "pytest-cov ~=3.0",
    "pytest-mock ~=3.7.0",
]


[tool.black]
# Don't forget to sync this with isort, .flake8
line-length = 80


[tool.isort]
profile = "black"
# Don't forget to sync this with black, .flake8
line_length = 80


[tool.coverage.run]
source = ["foodx_devops_tools"]
branch = true


[tool.coverage.report]
exclude_lines = [
    "except ImportError",
    "raise NotImplementedError",
    "pass",
    "ABCmeta",
    "abstractmethod",
    "warnings.warn",
]
omit = [
    "*exceptions*",
    "*pytest_cache*",
    ".venv/*",
    "dist/*",
]
precision = 0
show_missing = true
